add new function game2.py

--- a/IDE/project_0/game.ipynb
+++ b/IDE/project_0/game.ipynb
@@ -9,63 +9,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
+      "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 100 попытки\n",
+      "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n",
+      "Run benchmarking for game_core_v3: Ваш алгоритм угадывает число в среднем за: 7 попытки\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from game_v2 import score_game, random_predict"
+    "from game2 import score_game, random_predict, game_core_v2, game_core_v3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Угадываем рандомно"
+    "## Сравниваем три функции по поиску случайного числа"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за: 100 попытки\n",
+      "Ваш алгоритм угадывает число в среднем за: 33 попытки\n",
+      "Ваш алгоритм угадывает число в среднем за: 7 попытки\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_game(random_predict) #вызов функции"
+    "score_game(random_predict) #вызов функции\n",
+    "score_game(game_core_v2)\n",
+    "score_game(game_core_v3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Функция game_core_v3 угадывает число в среднем за 7 попыток, что меньше 20."
    ]
   }
  ],
